Video 7 - URL Connections
Created multiple URLs from base URI and relative URIs

Created Relative URI

Made URI from URL

Using BufferedReader/InputStreamReaded, read the data from a URL

Used URLConnection to connect to a URL and setDoOutput to write to a connection